# odilf.com

./: .gitignore  Cargo.toml  binserve.json  flake.nix  justfile  module.nix  projects.toml  result
.helix/: config.toml  languages.toml
public/: app.css  fonts.css
src/: app.rs  components.rs  lib.rs  main.rs
src/blog/: data.rs  feed.rs  fs.rs  index.js  markdown.rs  mod.rs
src/components/: button.rs  mod.rs  theme_switcher.js
src/media/: data.rs  index.js  markdown.rs  mod.rs
src/pics/: mod.rs
src/pics/immich/: fetch.rs  mod.rs
src/projects/: fetch.rs  mod.rs
style/: tailwind.css
