[package]
name = "odilf-site"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.4", features = ["http2"] }
color-eyre = "0.6.5"
comrak = "0.40.0"
gray_matter = "0.3.2"
jiff = { version = "0.2.15", features = ["serde"] }
katex = "0.4.6"
maud = { version = "0.27.0", features = ["axum"] }
serde = { version = "1.0.219", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
