[package]
name = "odilf-site"
version = "0.1.0"
edition = "2024"
default-run = "main"

[dependencies]
color-eyre = "0.6.5"
comrak = "0.40.0"
gray_matter = "0.3.2"
jiff = { version = "0.2.15", features = ["serde"] }
katex = "0.4.6"
maud = "0.27.0"
reqwest = { version = "0.12.22", features = ["blocking", "json"] }
serde = "1.0.219"
serde_json = "1.0.142"
serde_with = "3.14.0"
toml = { version = "0.9.5", features = ["preserve_order"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = { version = "2.5.7", features = ["serde"] }

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "fetch"
path = "src/bin/fetch.rs"
